add todos inline

--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -291,6 +291,7 @@ To begin building attributes from the data, each week is divided into time perio
 The model consists of the following features, which can be grouped into 4 categories:
 % The data is aggregated by user and by link.0
 
+\todo{review these lists display}
 \begin{enumerate*}[label={\alph*)},]
 \item \textbf{Used and Home Antennas:} For each user $u \in \calN_C$, we register the top ten most used antennas, during each month of the training period,
 together with the number of calls made through each antenna.
