neutral user gender across all chapters

--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -207,7 +207,7 @@ This allows us to see how the algorithm selects better features at low-level nod
 
 From \cref{fig:decision_tree_actual_problem} we can approximate which features are most important to the algorithm when deciding a node split, given by the Gini splitting criteria.
 Given that in \cref{target2} we are looking for people that migrated out of the endemic region, the choice of the tree's root feature seems appropriate.
-The mobility diameter gives an idea of a user's influence area when using his mobile phone and as such, this attribute might indicative of past migrations.
+The mobility diameter gives an idea of a user's influence area when using their mobile phone and as such, this attribute might indicative of past migrations.
 
 Subsequently, the usage volume of a user's home antenna appears as the second most important features, both during weeknights and for the whole day.
 
@@ -1097,7 +1097,7 @@ This outcome is presented in \cref{tab:boosting_big_experiment_best_features}, w
 
 
 The top features list shows us the importance of mobility diameter in both cases.
-We see that both weeknight and all-week user's mobility, are deemed relevant to detect his past endemic condition.
+We see that both weeknight and all-week user's mobility, are deemed relevant to detect their past endemic condition.
 This outcome confirms what was seen in \cref{tab:random_forest_big_experiment_best_features} where these attributes were, in general, performing.
 
 As expected, in all cases we see that there are a number of features logging vulnerable interactions of users living in non-endemic regions.
