--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -252,7 +252,7 @@ We fit a Decision Tree classifier on \cref{target2} which has a high imbalance b
 A discussion of this model's formulation is presented in \cref{ch:ensembleMethods}.
 This is a tree based model which increases its complexity by growing the tree's depth.
 In turn, this increases the number of features used in by the leaner to decide on the predicted target.
-%It is clear her that higher depth implies increasing model complexity\footnote{A detailed explanation of this technique can be found later in \cref{section:decision_trees}.}.
+%It is clear here that higher depth implies increasing model complexity\footnote{A detailed explanation of this technique can be found later in \cref{section:decision_trees}.}.
 
 To evalute the fit learner, we take a monotonically increasing scoring function in which
 higher values means better scores.
