--- a/ch_results.tex
+++ b/ch_results.tex
@@ -185,7 +185,7 @@ With this we showed, for each node, the attribute used in that splitting decisio
 These plots provided some insights into what features were initially being used by the algorithm to separate samples, according to their split index performance.
 For instance, in both fits the root split was based on the user's mobility diameter, with split values near to $47.5$ kilometres in both cases.
 This means that a mobility diameter of $47.5$ was the best split decision the algorithm could take in order to improve the Gini index of the sub groups.
-Recall here that the mobility diameter quantifies the user's area of influence given by his mobile connection.
+Recall here that the mobility diameter quantifies the user's area of influence given by their mobile connections.
 
 The other significant features, selected at splits near to the tree's root level, was the user's home antenna call count.
 Both the volume of calls during the whole week and usage specifically during weeknights time was important to the node-splitting algorithm.
@@ -195,7 +195,7 @@ These split values were characterizing segments of heavy users, that is users th
 
 % This result makes does not strike as wild as
 % Still this result does not imply that all split all users
- % It seems that a big area when using his mobile phone and as such, this attribute might indicative of past migrations.
+ % It seems that a big area as a result of their their mobile phone usage and as such, this attribute might indicative of past migrations.
 
 
 Here we must note however, that both best-fit trees result in a low $Accuracy$ scores of $43.2\%$,and $57.9\%$ respectively.
